--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=yes"/>
 <link rel="icon" href="assets/imgs/favicon.ico" type="image/x-icon"/>
 <title>RIFKIWEB | Sebuah website sederhana</title>
 <meta name="author" content="Muhamad Rifki Sumarna"/>
@@ -103,112 +103,112 @@
 <script data-goatcounter="https://webrifki.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </head>
 <body data-spy="scroll" data-offset="40" id="home">
-    <!-- page header -->
-    <header id="home" class="header">
-        <div class="overlay"></div>
-        <div class="header-content container">
-            <h1 class="header-title"><span class="up">Selamat datang di</span><span class="down">website rifki</span></h1>
-        </div>              
-    </header><!-- end of page header -->
-    <!-- about section -->
-    <section class="section pt-0" id="about">
-        <!-- container -->
-        <div class="container text-center">
-            <!-- about wrapper -->
-            <div class="about">
-                <div class="about-img-holder">
-                    <img src="assets/imgs/rifki.png" class="about-img" alt="RIFKI">
-                </div>
-                <div class="about-caption">
-                    <h2 class="section-title mb-3">Tentang saya</h2>
-                    <p align="justify">
-                        Halo, perkenalkan nama saya Muhamad Rifki Sumarna, sering dipanggil iki. Saya lahir di Subang pada tanggal 13 Desember 2005. Anak dari Bapak & Mamah yang hebat, sangat kuat nan sabar dalam hal mendidik saya, beliau adalah kedua orang tua saya, Nana Sumarna & Titin Suarsih.<br/><br/>Anak pertama dari dua bersaudara, adik saya perempuan bernama Tina Nurhasanah. Alamat saya di kampung palasari, tanjungwangi, kec. cijambe, kab. subang, jawa barat. Sekian perkenalan diri dari saya.</p>
-                    <main><div class="container py-5 text-center">
-                    <a href="https://www.rifkiblog.my.id" target="_blank" class="link wobble-to-bottom-right-on-hover">Blog</i></a>
-                    <a href="https://www.youtube.com/@muhammadrifkiez" target="_blank" class="link wobble-to-bottom-right-on-hover">YouTube</a>
-                    </div></main>
-                </div>              
-            </div><!-- end of about wrapper -->
-        </div><!-- end of container -->
-    </section> <!-- end of about section -->
-    <!-- portfolio section -->
-    <section class="section" id="portfolio">
-        <div class="container text-center">
-            <h6 class="section-title mb-6">Foto kegiatan di sekolah</h6>
-            <!-- row -->
-            <div class="row">
-                <div class="col-md-4">
-                    <a href="assets/imgs/kegiatan1.jpg" class="portfolio-card">
-                        <img src="assets/imgs/kegiatan1.jpg" class="portfolio-card-img" alt="FOTO-KEGIATAN1">    
-                        <span class="portfolio-card-overlay">
-                            <span class="portfolio-card-caption">
-                                <h4 align="justify">Membuat Voucher Wi-Fi menggunakan MikroTik & Mikhmon.</h4>
-                            </span>                         
-                        </span>                     
-                    </a>
-                </div>
-                <div class="col-md-4">
-                    <a href="assets/imgs/kegiatan2.jpg" class="portfolio-card">
-                        <img class="portfolio-card-img" src="assets/imgs/kegiatan2.jpg" class="img-responsive rounded" alt="FOTO-KEGIATAN2">
-                        <span class="portfolio-card-overlay">
-                            <span class="portfolio-card-caption">
-                                <h4 align="justify">Konfigurasi web server & dns server Debian 10 VirtualBox.</h4>
-                            </span>                         
-                        </span>    
-                    </a>                     
-                </div>
-		<div class="col-md-4">
-                    <a href="assets/imgs/kegiatan3.jpg" class="portfolio-card">
-                        <img class="portfolio-card-img" src="assets/imgs/kegiatan3.jpg" class="img-responsive rounded" alt="FOTO-KEGIATAN3">
-                        <span class="portfolio-card-overlay">
-                            <span class="portfolio-card-caption">
-                                <h4 align="justify">Konfigurasi NAT & Wireless Ap-bridge di MikroTik.</h4>
-                            </span>                         
-                        </span>    
-                    </a>                     
-                </div>
-            </div><!-- end of row -->
-        </div><!-- end of container -->
-    </section> <!-- end of portfolio section -->
-    <!-- contact section -->
-    <section class="section" id="contact">
-        <div class="container text-center">
-            <h6 class="section-title mb-5">Kotak pesan</h6>
-            <!-- contact form -->
-            <form class="contact-form col-md-10 col-lg-8 m-auto" action="https://formspree.io/f/mdovwarq" method="post">
-                <div class="form-row">
-                    <div class="form-group col-sm-6">
-                        <input type="text" name="name" size="50" class="form-control" placeholder="Nama anda" required>                 
-                    </div>
-                    <div class="form-group col-sm-6">
-                        <input type="email" name="email" class="form-control" placeholder="Email anda" required>                 
-                    </div>
-                    <div class="form-group col-sm-12">
-                        <textarea name="message" rows="6"   class="form-control" placeholder="Isi pesan" required></textarea>
-                    </div>
-                    <div class="form-group col-sm-12 mt-3">
-                        <input type="submit" value="Kirim pesan" class="btn btn-outline-primary rounded">                  
-                    </div>
-                </div>  
-            </form><!-- end of contact form -->
-        </div><!-- end of container -->
-    </section><!-- end of contact section -->
-    <!-- footer -->
-    <div class="container">
-        <footer class="footer">       
-        <p class="mb-0">&copy; 2023 RIFKIWEB</p>
-	    <div class="a2a_kit a2a_kit_size_32 a2a_default_style a2a_follow">
-        <a class="a2a_button_facebook" href="https://www.facebook.com/ikiiii.rifki"></a>
-		<a class="a2a_button_instagram" href="https://www.instagram.com/_.ikiiii"></a>
-		<a class="a2a_button_github" href="https://github.com/ikiitech"></a></div>
-        </footer>
-    </div> <!-- end of page footer -->
-	<!-- core  -->
-    <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js' type='text/javascript'></script>
-    <script src="assets/vendors/bootstrap/bootstrap.bundle.min.js"></script>
-    <!-- bootstrap 3 affix -->
-	<script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
-    <!-- Meyawo js -->
-    <script src="assets/js/meyawo.js"></script>
+<!-- page header -->
+<header id="home" class="header">
+<div class="overlay"></div>
+<div class="header-content container">
+<h1 class="header-title"><span class="up">Selamat datang di</span><span class="down">website rifki</span></h1>
+</div>              
+</header><!-- end of page header -->
+<!-- about section -->
+<section class="section pt-0" id="about">
+<!-- container -->
+<div class="container text-center">
+<!-- about wrapper -->
+<div class="about">
+<div class="about-img-holder">
+<img src="assets/imgs/rifki.png" class="about-img" alt="RIFKI">
+</div>
+<div class="about-caption">
+<h2 class="section-title mb-3">Tentang saya</h2>
+<p align="justify">
+Halo, perkenalkan nama saya Muhamad Rifki Sumarna, sering dipanggil iki. Saya lahir di Subang pada tanggal 13 Desember 2005. Anak dari Bapak & Mamah yang hebat, sangat kuat nan sabar dalam hal mendidik saya, beliau adalah kedua orang tua saya, Nana Sumarna & Titin Suarsih.<br/><br/>Anak pertama dari dua bersaudara, adik saya perempuan bernama Tina Nurhasanah. Alamat saya di kampung palasari, tanjungwangi, kec. cijambe, kab. subang, jawa barat. Sekian perkenalan diri dari saya.</p>
+<main><div class="container py-5 text-center">
+<a href="https://www.rifkiblog.my.id" target="_blank" class="link wobble-to-bottom-right-on-hover">Blog</i></a>
+<a href="https://www.youtube.com/@muhammadrifkiez" target="_blank" class="link wobble-to-bottom-right-on-hover">YouTube</a>
+</div></main>
+</div>              
+</div><!-- end of about wrapper -->
+</div><!-- end of container -->
+</section> <!-- end of about section -->
+<!-- portfolio section -->
+<section class="section" id="portfolio">
+<div class="container text-center">
+<h6 class="section-title mb-6">Foto kegiatan di sekolah</h6>
+<!-- row -->
+<div class="row">
+<div class="col-md-4">
+<a href="assets/imgs/kegiatan1.jpg" class="portfolio-card">
+<img src="assets/imgs/kegiatan1.jpg" class="portfolio-card-img" alt="FOTO-KEGIATAN1">    
+<span class="portfolio-card-overlay">
+<span class="portfolio-card-caption">
+<h4 align="justify">Membuat Voucher Wi-Fi menggunakan MikroTik & Mikhmon.</h4>
+</span>                         
+</span>                     
+</a>
+</div>
+<div class="col-md-4">
+<a href="assets/imgs/kegiatan2.jpg" class="portfolio-card">
+<img class="portfolio-card-img" src="assets/imgs/kegiatan2.jpg" class="img-responsive rounded" alt="FOTO-KEGIATAN2">
+<span class="portfolio-card-overlay">
+<span class="portfolio-card-caption">
+<h4 align="justify">Konfigurasi web server & dns server Debian 10 VirtualBox.</h4>
+</span>                         
+</span>    
+</a>                     
+</div>
+<div class="col-md-4">
+<a href="assets/imgs/kegiatan3.jpg" class="portfolio-card">
+<img class="portfolio-card-img" src="assets/imgs/kegiatan3.jpg" class="img-responsive rounded" alt="FOTO-KEGIATAN3">
+<span class="portfolio-card-overlay">
+<span class="portfolio-card-caption">
+<h4 align="justify">Konfigurasi NAT & Wireless Ap-bridge di MikroTik.</h4>
+</span>                         
+</span>    
+</a>                     
+</div>
+</div><!-- end of row -->
+</div><!-- end of container -->
+</section> <!-- end of portfolio section -->
+<!-- contact section -->
+<section class="section" id="contact">
+<div class="container text-center">
+<h6 class="section-title mb-5">Kotak pesan</h6>
+<!-- contact form -->
+<form class="contact-form col-md-10 col-lg-8 m-auto" action="https://formspree.io/f/mdovwarq" method="post">
+<div class="form-row">
+<div class="form-group col-sm-6">
+<input type="text" name="name" size="50" class="form-control" placeholder="Nama anda" required>                 
+</div>
+<div class="form-group col-sm-6">
+<input type="email" name="email" class="form-control" placeholder="Email anda" required>                 
+</div>
+<div class="form-group col-sm-12">
+<textarea name="message" rows="6"   class="form-control" placeholder="Isi pesan" required></textarea>
+</div>
+<div class="form-group col-sm-12 mt-3">
+<input type="submit" value="Kirim pesan" class="btn btn-outline-primary rounded">                  
+</div>
+</div>  
+</form><!-- end of contact form -->
+</div><!-- end of container -->
+</section><!-- end of contact section -->
+<!-- footer -->
+<div class="container">
+<footer class="footer">       
+<p class="mb-0">&copy; 2023 RIFKIWEB</p>
+<div class="a2a_kit a2a_kit_size_32 a2a_default_style a2a_follow">
+<a class="a2a_button_facebook" href="https://www.facebook.com/ikiiii.rifki"></a>
+<a class="a2a_button_instagram" href="https://www.instagram.com/_.ikiiii"></a>
+<a class="a2a_button_github" href="https://github.com/ikiitech"></a></div>
+</footer>
+</div> <!-- end of page footer -->
+<!-- core  -->
+<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js' type='text/javascript'></script>
+<script src="assets/vendors/bootstrap/bootstrap.bundle.min.js"></script>
+<!-- bootstrap 3 affix -->
+<script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
+<!-- Meyawo js -->
+<script src="assets/js/meyawo.js"></script>
 </body>
 </html>
