--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 Halo, perkenalkan nama saya Muhamad Rifki Sumarna, sering dipanggil iki. Saya lahir di Subang pada tanggal 13 Desember 2005. Anak dari Bapak & Mamah yang hebat, sangat kuat nan sabar dalam hal mendidik saya, beliau adalah kedua orang tua saya, Nana Sumarna & Titin Suarsih.<br/><br/>Anak pertama dari dua bersaudara, adik saya perempuan bernama Tina Nurhasanah. Alamat saya di kampung palasari, tanjungwangi, kec. cijambe, kab. subang, jawa barat. Sekian perkenalan diri dari saya.</p>
 <main><div class="container py-5 text-center">
 <a href="https://www.rifkiblog.my.id" target="_blank" class="link wobble-to-bottom-right-on-hover">Blog</i></a>
-<a href="https://www.youtube.com/@muhammadrifkiez" target="_blank" class="link wobble-to-bottom-right-on-hover">YouTube</a>
+<a href="arsip-foto" target="_blank" class="link wobble-to-bottom-right-on-hover">Arsip foto</a>
 </div></main>
 </div>              
 </div><!-- end of about wrapper -->
@@ -200,6 +200,7 @@ Halo, perkenalkan nama saya Muhamad Rifki Sumarna, sering dipanggil iki. Saya la
 <div class="a2a_kit a2a_kit_size_32 a2a_default_style a2a_follow">
 <a class="a2a_button_facebook" href="https://www.facebook.com/ikiiii.rifki"></a>
 <a class="a2a_button_instagram" href="https://www.instagram.com/_.ikiiii"></a>
+<a class="a2a_button_youtube" href="https://www.youtube.com/@muhammadrifkiez"></a>
 <a class="a2a_button_github" href="https://github.com/ikiitech"></a></div>
 </footer>
 </div> <!-- end of page footer -->
