--- a/arsip-foto/index.html
+++ b/arsip-foto/index.html
@@ -4,12 +4,12 @@
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=yes"/>
 <title>RIFKIWEB | Arsip foto</title>
 <link rel="icon" type="image/x-icon" href="favicon.ico"/>
-<meta name="description" content="Kumpulan foto di sekolah"/>
+<meta name="description" content="foto-foto di sekolah"/>
 <!-- Google fonts-->
 <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css"/>
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css"/>
 <!-- Core theme CSS (includes Bootstrap)-->
-<link href="styles.css" rel="stylesheet" />
+<link href="styles.css" rel="stylesheet"/>
 <script async src="https://static.addtoany.com/menu/page.js"></script>
 </head>
 <body>
@@ -18,7 +18,16 @@
 <div class="container px-4 px-lg-5">
 <div class="row gx-4 gx-lg-5 justify-content-center">
 <div class="col-md-10 col-lg-8 col-xl-7">
-<p align="center">Powered by Github</p>
+<p align="center"><a href="img/img (1).jpg"><img class="img-fluid" src="img/img (1).jpg" alt="gambar1" /></a></p>
+<p align="center"><a href="img/img (2).jpg"><img class="img-fluid" src="img/img (2).jpg" alt="gambar2" /></a></p>
+<p align="center"><a href="img/img (3).jpg"><img class="img-fluid" src="img/img (3).jpg" alt="gambar3" /></a></p>
+<p align="center"><a href="img/img (4).jpg"><img class="img-fluid" src="img/img (4).jpg" alt="gambar4" /></a></p>
+<p align="center"><a href="img/img (5).jpg"><img class="img-fluid" src="img/img (5).jpg" alt="gambar5" /></a></p>
+<p align="center"><a href="img/img (6).jpg"><img class="img-fluid" src="img/img (6).jpg" alt="gambar6" /></a></p>
+<p align="center"><a href="img/img (7).jpg"><img class="img-fluid" src="img/img (7).jpg" alt="gambar7" /></a></p>
+<p align="center"><a href="img/img (8).jpg"><img class="img-fluid" src="img/img (8).jpg" alt="gambar8" /></a></p>
+<p align="center"><a href="img/img (9).jpg"><img class="img-fluid" src="img/img (9).jpg" alt="gambar9" /></a></p>
+<p align="center"><a href="img/img (10).jpg"><img class="img-fluid" src="img/img (10).jpg" alt="gambar10" /></a></p>
 </div></div></div>
 </article>
 <!-- Footer-->
