--- a/arsip-foto/index.html
+++ b/arsip-foto/index.html
@@ -18,16 +18,36 @@
 <div class="container px-4 px-lg-5">
 <div class="row gx-4 gx-lg-5 justify-content-center">
 <div class="col-md-10 col-lg-8 col-xl-7">
-<p align="center"><a href="img/img (1).jpg"><img class="img-fluid" src="img/img (1).jpg" alt="gambar1" /></a></p>
-<p align="center"><a href="img/img (2).jpg"><img class="img-fluid" src="img/img (2).jpg" alt="gambar2" /></a></p>
-<p align="center"><a href="img/img (3).jpg"><img class="img-fluid" src="img/img (3).jpg" alt="gambar3" /></a></p>
-<p align="center"><a href="img/img (4).jpg"><img class="img-fluid" src="img/img (4).jpg" alt="gambar4" /></a></p>
-<p align="center"><a href="img/img (5).jpg"><img class="img-fluid" src="img/img (5).jpg" alt="gambar5" /></a></p>
-<p align="center"><a href="img/img (6).jpg"><img class="img-fluid" src="img/img (6).jpg" alt="gambar6" /></a></p>
-<p align="center"><a href="img/img (7).jpg"><img class="img-fluid" src="img/img (7).jpg" alt="gambar7" /></a></p>
-<p align="center"><a href="img/img (8).jpg"><img class="img-fluid" src="img/img (8).jpg" alt="gambar8" /></a></p>
-<p align="center"><a href="img/img (9).jpg"><img class="img-fluid" src="img/img (9).jpg" alt="gambar9" /></a></p>
-<p align="center"><a href="img/img (10).jpg"><img class="img-fluid" src="img/img (10).jpg" alt="gambar10" /></a></p>
+<p align="center"><img class="img-fluid" src="img/img (1).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (2).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (3).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (4).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (5).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (6).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (7).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (8).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (9).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (10).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (1).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (1).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (1).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (1).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (1).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (1).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (1).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (1).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (1).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (1).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (1).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (1).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (1).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (1).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (1).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (1).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (1).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (1).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (1).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (30).jpg"/></p>
 </div></div></div>
 </article>
 <!-- Footer-->
