--- a/arsip-foto/index.html
+++ b/arsip-foto/index.html
@@ -45,6 +45,76 @@
 <p align="center"><img class="img-fluid" src="img/img (28).jpg"/></p>
 <p align="center"><img class="img-fluid" src="img/img (29).jpg"/></p>
 <p align="center"><img class="img-fluid" src="img/img (30).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (31).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (32).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (33).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (34).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (35).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (36).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (37).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (38).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (39).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (40).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (41).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (42).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (43).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (44).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (45).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (46).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (47).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (48).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (49).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (50).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (51).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (52).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (53).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (54).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (55).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (56).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (57).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (58).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (59).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (60).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (61).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (62).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (63).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (64).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (65).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (66).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (67).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (68).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (69).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (70).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (71).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (72).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (73).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (74).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (75).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (76).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (77).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (78).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (79).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (80).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (81).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (82).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (83).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (84).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (85).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (86).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (87).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (88).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (89).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (90).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (91).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (92).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (93).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (94).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (95).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (96).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (97).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (98).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (99).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (100).jpg"/></p>
 </div></div></div>
 </article>
 <!-- Footer-->
