--- a/arsip-foto/index.html
+++ b/arsip-foto/index.html
@@ -115,6 +115,51 @@
 <p align="center"><img class="img-fluid" src="img/img (98).jpg"/></p>
 <p align="center"><img class="img-fluid" src="img/img (99).jpg"/></p>
 <p align="center"><img class="img-fluid" src="img/img (100).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (101).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (102).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (103).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (104).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (105).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (106).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (107).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (108).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (109).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (110).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (111).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (112).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (113).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (114).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (115).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (116).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (117).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (118).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (119).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (120).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (121).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (122).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (123).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (124).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (125).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (126).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (127).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (128).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (129).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (130).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (131).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (132).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (133).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (134).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (135).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (136).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (137).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (138).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (139).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (140).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (141).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (142).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (143).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (144).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (145).jpg"/></p>
 </div></div></div>
 </article>
 <!-- Footer-->
