--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 Halo, perkenalkan nama saya Muhamad Rifki Sumarna, sering dipanggil iki. Saya lahir di Subang pada tanggal 13 Desember 2005. Anak dari Bapak & Mamah yang hebat, sangat kuat nan sabar dalam hal mendidik saya, beliau adalah kedua orang tua saya, Nana Sumarna & Titin Suarsih.<br/><br/>Anak pertama dari dua bersaudara, adik saya perempuan bernama Tina Nurhasanah. Alamat saya di kampung palasari, tanjungwangi, kec. cijambe, kab. subang, jawa barat. Sekian perkenalan diri dari saya.</p>
 <main><div class="container py-5 text-center">
 <a href="https://www.rifkiblog.my.id" target="_blank" class="link wobble-to-bottom-right-on-hover">Blog</i></a>
-<a href="arsip-foto" target="_blank" class="link wobble-to-bottom-right-on-hover">Arsip foto</a>
+<a href="arsip-foto" class="link wobble-to-bottom-right-on-hover">Arsip foto</a>
 </div></main>
 </div>              
 </div><!-- end of about wrapper -->
