--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 <!-- about wrapper -->
 <div class="about">
 <div class="about-img-holder">
-<img src="assets/imgs/rifki.png" class="about-img" alt="RIFKI">
+<img src="assets/imgs/rifki.jpg" class="about-img" alt="RIFKI">
 </div>
 <div class="about-caption">
 <h2 class="section-title mb-3">Tentang saya</h2>
