--- a/arsip-foto/index.html
+++ b/arsip-foto/index.html
@@ -8,6 +8,7 @@
 <!-- Core theme CSS (includes Bootstrap)-->
 <link href="styles.css" rel="stylesheet"/>
 <script async src="https://static.addtoany.com/menu/page.js"></script>
+<script> alert('HALAMAN INI AKAN MEMAKAN CUKUP BANYAK KUOTA INTERNET, INGIN MELANJUTKAN?'); </script>
 </head>
 <body>
 <!-- Post Content-->
@@ -160,6 +161,9 @@
 <p align="center"><img class="img-fluid" src="img/img (143).jpg"/></p>
 <p align="center"><img class="img-fluid" src="img/img (144).jpg"/></p>
 <p align="center"><img class="img-fluid" src="img/img (145).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (146).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (147).jpg"/></p>
+<p align="center"><img class="img-fluid" src="img/img (148).jpg"/></p>
 </div></div></div>
 </article>
 <!-- Footer-->
