--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ Halo, perkenalkan nama saya Muhamad Rifki Sumarna, sering dipanggil iki. Saya la
 <!-- footer -->
 <div class="container">
 <footer class="footer">       
-<p class="mb-0">&copy; 2023 RIFKIWEB</p>
+<p class="mb-0">MUHAMAD RIFKI SUMARNA</p>
 <div class="a2a_kit a2a_kit_size_32 a2a_default_style a2a_follow">
 <a class="a2a_button_facebook" href="https://www.facebook.com/ikiiii.rifki"></a>
 <a class="a2a_button_instagram" href="https://www.instagram.com/_.ikiiii"></a>
