--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=yes"/>
 <link rel="icon" href="assets/imgs/favicon.ico" type="image/x-icon"/>
 <title>RIFKIWEB | Sebuah website sederhana</title>
+<meta name="keywords" content="rifkiweb"/>
 <meta name="author" content="Muhamad Rifki Sumarna"/>
 <meta name="description" content="Selamat datang di website rifki"/>
 <!-- font icons -->
