--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=yes"/>
 <link rel="icon" href="assets/imgs/favicon.ico" type="image/x-icon"/>
 <title>RIFKIWEB | Sebuah website sederhana</title>
-<meta name="keywords" content="rifkiweb"/>
+<meta name="keywords" content="muhamad rifki sumarna, rifkiweb"/>
 <meta name="author" content="Muhamad Rifki Sumarna"/>
 <meta name="description" content="Selamat datang di website rifki"/>
 <!-- font icons -->
@@ -100,16 +100,14 @@
   animation-iteration-count: 1;
 }
 </style>
-<script async src="https://static.addtoany.com/menu/page.js"></script>
-<script data-goatcounter="https://webrifki.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+<script async src="https://static.addtoany.com/menu/page.js"></script><script data-goatcounter="https://webrifki.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </head>
 <body data-spy="scroll" data-offset="40" id="home">
 <!-- page header -->
 <header id="home" class="header">
 <div class="overlay"></div>
 <div class="header-content container">
-<h1 class="header-title"><span class="up">Selamat datang di</span><span class="down">website rifki</span></h1>
-</div>              
+<h1 class="header-title"><span class="up">Selamat datang di</span><span class="down">website rifki</span></h1></div>              
 </header><!-- end of page header -->
 <!-- about section -->
 <section class="section pt-0" id="about">
@@ -118,8 +116,7 @@
 <!-- about wrapper -->
 <div class="about">
 <div class="about-img-holder">
-<img src="assets/imgs/rifki.jpg" class="about-img" alt="RIFKI">
-</div>
+<img src="assets/imgs/rifki.jpg" class="about-img" alt="RIFKI"></div>
 <div class="about-caption">
 <h2 class="section-title mb-3">Tentang saya</h2>
 <p align="justify">
@@ -127,8 +124,7 @@ Halo, perkenalkan nama saya Muhamad Rifki Sumarna, sering dipanggil iki. Saya la
 <main><div class="container py-5 text-center">
 <a href="https://www.rifkiblog.my.id" target="_blank" class="link wobble-to-bottom-right-on-hover">Blog</a>
 <a href="arsip-foto" class="link wobble-to-bottom-right-on-hover">Arsip foto</a>
-</div></main>
-</div>              
+</div></main></div>              
 </div><!-- end of about wrapper -->
 </div><!-- end of container -->
 </section> <!-- end of about section -->
@@ -140,18 +136,14 @@ Halo, perkenalkan nama saya Muhamad Rifki Sumarna, sering dipanggil iki. Saya la
 <form class="contact-form col-md-10 col-lg-8 m-auto" action="https://formspree.io/f/mdovwarq" method="post">
 <div class="form-row">
 <div class="form-group col-sm-6">
-<input type="text" name="name" size="50" class="form-control" placeholder="Nama anda" required>                 
-</div>
+<input type="text" name="name" size="50" class="form-control" placeholder="Nama anda" required></div>
 <div class="form-group col-sm-6">
-<input type="email" name="email" class="form-control" placeholder="Email anda" required>                 
-</div>
+<input type="email" name="email" class="form-control" placeholder="Email anda" required></div>
 <div class="form-group col-sm-12">
-<textarea name="message" rows="6"   class="form-control" placeholder="Isi pesan" required></textarea>
-</div>
+<textarea name="message" rows="6"   class="form-control" placeholder="Isi pesan" required></textarea></div>
 <div class="form-group col-sm-12 mt-3">
 <input type="submit" value="Kirim pesan" class="btn btn-outline-primary rounded">                  
-</div>
-</div>  
+</div></div>  
 </form><!-- end of contact form -->
 </div><!-- end of container -->
 </section><!-- end of contact section -->
