--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=yes"/>
 <link rel="icon" href="assets/imgs/favicon.ico" type="image/x-icon"/>
+<meta name="robots" content="index, follow"/>
 <title>RIFKIWEB | Sebuah website sederhana</title>
 <meta name="keywords" content="muhamad rifki sumarna, rifkiweb"/>
 <meta name="author" content="Muhamad Rifki Sumarna"/>
 <meta name="description" content="Selamat datang di website rifki"/>
+<meta name="revisit-after" content="1 days"/>
 <!-- font icons -->
 <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css"/>
 <!-- Bootstrap + Meyawo main styles -->
@@ -100,7 +102,7 @@
   animation-iteration-count: 1;
 }
 </style>
-<script async src="https://static.addtoany.com/menu/page.js"></script><script data-goatcounter="https://webrifki.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+<script async src="https://static.addtoany.com/menu/page.js"></script>
 </head>
 <body data-spy="scroll" data-offset="40" id="home">
 <!-- page header -->
