--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           <div class="col-lg-4">
             <img src="assets/img/rifki.png" class="img-fluid" alt="rifki">
           </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content"><br/><br/>
+          <div class="col-lg-8 pt-4 pt-lg-0 content"><br/>
             <p align="justify">
               Halo, perkenalkan nama saya Muhamad Rifki Sumarna, sering dipanggil iki. Saya lahir di Subang pada tanggal 13 Desember 2005. Anak dari Bapak & Mamah yang hebat, sangat kuat nan sabar dalam hal mendidik saya, beliau adalah kedua orang tua saya, Nana Sumarna & Titin Suarsih.
             </p>
