--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; 2024 <strong><span>RIFKIWEB</span></strong>
+        Oleh <strong><span>Muhamad Rifki Sumarna</span></strong>
       </div>
     </div>
   </footer>
@@ -157,7 +157,6 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/typed.js/typed.umd.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/js/main.js"></script>
 
 </body>
