--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <head>
-
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <title>RIFKIWEB - Selamat datang</title>
   <meta content="muhamad rifki sumarna" name="author"/>
   <meta content="Selamat datang di website saya" name="description"/>
   <meta content="muhamad rifki sumarna, rifkiweb" name="keywords"/>
-
   <link href="assets/img/favicon.ico" rel="icon"/>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet"/>
   <link href="assets/vendor/aos/aos.css" rel="stylesheet"/>
@@ -17,10 +15,8 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet"/>
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"/>
   <link href="assets/css/style.css" rel="stylesheet"/>
-
 </head>
 <body>
-
   <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
   <header id="header">
     <div class="d-flex flex-column">
@@ -67,7 +63,7 @@
             </p>
             <p align="justify">Anak pertama dari dua bersaudara, adik saya perempuan bernama Tina Nurhasanah. Alamat saya di kampung palasari, tanjungwangi, kec. cijambe, kab. subang, jawa barat. Sekian perkenalan diri dari saya.
             </p>
-            <a href="https://www.rifkiblog.my.id" target="_blank" class="link wobble-to-bottom-right-on-hover">Blog saya</a>
+            <a href="https://www.rifkiblog.my.id" target="_blank" class="link wobble-to-bottom-right-on-hover"><strong>Blog saya</strong></a>
           </div>
         </div>
       </div>
@@ -158,6 +154,5 @@
   <script src="assets/vendor/typed.js/typed.umd.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/js/main.js"></script>
-
 </body>
 </html>
