--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet"/>
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"/>
   <link href="assets/css/style.css" rel="stylesheet"/>
+  <script data-goatcounter="https://iki.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </head>
 <body>
   <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
