--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta content="Selamat datang di website saya" name="description"/>
   <meta content="muhamad rifki sumarna, rifkiweb" name="keywords"/>
 
+  <script data-goatcounter="https://monitor.rifkiweb.my.id/count" async src="//gc.zgo.at/count.js"></script>
   <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
   <link href="assets/img/favicon.ico" rel="icon"/>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet"/>
